fixed scrolling overlap issues on billing and support pages

--- a/src/css/active.css
+++ b/src/css/active.css
@@ -206,7 +206,10 @@ input[type=number] {
 #contentFour{
     overflow-y: scroll;
     height: 500px;
-    padding-top: 50px;
+    padding-top: 100px;
+    
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 /* width */
